--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -4,3 +4,13 @@ $color: purple;
     border: 4px solid $color;
     padding: 20px;
 }
+
+#oven > h1 {
+    border: 4px solid $color;
+    padding: 20px;
+}
+
+#drawer > h1 {
+    border: 4px solid $color;
+    padding: 20px;
+}
