--- a/src/index.scss
+++ b/src/index.scss
@@ -5,10 +5,25 @@
     display: flex;
     justify-content: right;
     align-items: flex-end;
+    background-image: url("/assets/Kitchen furniture set/Fridge_gray_1_close.png");
+    background-color: gray;
+        // postion, center, size to customize further 
 }
 
 #fridge:hover {
     background-color: aqua;
+}
+
+#tooltip {
+    position: absolute; 
+    background-color: gray;
+    opacity: 0;
+}
+
+body{
+    display: flex;
+    justify-content: space-evenly;
+    // background-image: ("assets/Kitchen furniture set/Fridge_gray_1_close.png");
 }
 
 .hidden{
@@ -20,6 +35,9 @@
     justify-content: center;
     align-items: center;
     border-style: solid;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 .ingredients {
@@ -32,10 +50,16 @@
     justify-content: center;
     align-items: center;
     border-style: solid;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 .drawer-page {
     border-style: solid;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 #drawer{
