--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -2,15 +2,22 @@ $color: purple;
 
 #fridge > h1 {
     border: 4px solid $color;
-    padding: 20px;
+    padding-left: 100px;
+    padding-right: 200px;
+    padding-top: 400px;
 }
 
 #oven > h1 {
     border: 4px solid $color;
-    padding: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 150px;
+    padding-top: 200px;
 }
 
 #drawer > h1 {
     border: 4px solid $color;
     padding: 20px;
+    
+    
 }
