--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -1,23 +1,44 @@
 $color: purple;
 
-#fridge > h1 {
-    border: 4px solid $color;
-    padding-left: 100px;
-    padding-right: 200px;
-    padding-top: 400px;
-}
+// #fridge > h1 {
+//     border: 4px solid $color;
+//     padding-left: 100px;
+//     padding-right: 200px;
+//     padding-top: 400px;
+// }
 
-#oven > h1 {
-    border: 4px solid $color;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-bottom: 150px;
-    padding-top: 200px;
-}
+// #oven > h1 {
+//     border: 4px solid $color;
+//     padding-left: 150px;
+//     padding-right: 150px;
+//     padding-bottom: 150px;
+//     padding-top: 200px;
+// }
 
-#drawer > h1 {
-    border: 4px solid $color;
-    padding: 20px;
+// #drawer > h1 {
+//     border: 4px solid $color;
+//     padding: 20px;
+// }
+
+
+// #fridge > h1 {
+//     border: 4px solid $color;
+//     padding-left: 100px;
+//     padding-right: 200px;
+//     padding-top: 400px;
+// }
+
+// #oven > h1 {
+//     border: 4px solid $color;
+//     padding-left: 150px;
+//     padding-right: 150px;
+//     padding-bottom: 150px;
+//     padding-top: 200px;
+// }
+
+// #drawer > h1 {
+//     border: 4px solid $color;
+//     padding: 20px;
     
     
-}
+// }
