--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ body{
 }
 
 #second-container {
-    width: 75%;
+    width: 1300px;
     // border-style: solid;
     z-index: 1;
 }
@@ -29,7 +29,7 @@ body{
 
 #fridge {
     // border-style: solid;
-    height: 100%;
+    height: 857px;
     width: 100%;
     margin-right: 5px;
     background-image: url("/src/assets/Kitchen_furniture_set/Fridge_gray_2_open_1.png");
@@ -37,6 +37,7 @@ body{
     background-position: bottom;
     background-size: 89%;
     z-index: 1;
+
 }
 
 #fridge:hover{
@@ -177,7 +178,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: 95%;
-    border: 1px solid #ff0000;
+    // border: 1px solid #ff0000;
     width: 40%; 
     height: 100%;
     z-index: 4;
@@ -196,6 +197,38 @@ body{
     left: 50%; 
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.281); 
+}
+#user-page{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    max-width: 600px;
+    text-align: left;
+    color: #7393B3;
+    font-family: cursive;
+    z-index: 4;
+}
+
+.user-modal{
+    display: flex; /* Hidden by default */
+    position: fixed; 
+    justify-content: center;
+    align-items: center;
+    z-index: 3; 
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; /* Enable scroll */
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.281); 
+    
 }
 
 .ingredients {
@@ -232,7 +265,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
-    border: 1px solid #ff0000;
+    // border: 1px solid #ff0000;
     width: 70%; 
     height: 100%;
     z-index: 4;
@@ -244,7 +277,7 @@ body{
     color: #7393B3;
     font-family: cursive;
     font-size: larger;
-    border: 1px solid #00ff11;
+    // border: 1px solid #00ff11;
     width: 50%; 
 }
 
@@ -254,10 +287,16 @@ body{
     align-items: center;
     // position: absolute;
     margin-left: 20%;
+    list-style: none;
 }
 
 #button{
     // display: flex;
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
     margin-top: 50px;
     margin-left: 50px;
 }
@@ -265,12 +304,17 @@ body{
 #clearRecipe{
     // display: flex;
     margin-left: 50px;
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
 }
 
 .pie-chart-container{
     display: flex;
     position: inherit;
-    border: 1px solid #ff0000;
+    // border: 1px solid #ff0000;
     width: 75%;
     height: 50%;
 }
@@ -283,7 +327,7 @@ body{
 }
 
 #chart{
-    border: 1px solid #00ff11;
+    // border: 1px solid #00ff11;
     height: 100%;
     width: 100%;
     // margin-right: 20%;
@@ -300,7 +344,7 @@ body{
     margin-top: 25%;
     height: 100%;
     width: 100%;
-    border: 1px solid #00ffff;
+    // border: 1px solid #00ffff;
     
 }
 .drawer-modal{
@@ -321,32 +365,30 @@ body{
 #drawer-page{
     display: none;
     position: absolute;
-    // align-items: center;
+    // display: flex;
+    align-items: center;
     background-image: url(/src/assets/Kitchen_furniture_set/spiral_notepad.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 95%;
-    border: 1px solid #ff0000;
+    // border: 1px solid #ff0000;
     width: 40%; 
     height: 100%;
     z-index: 4;
 }
 
 .drawer-container {
-    display: flex;
+    display: flex-column;
     justify-content: center;
     align-items: center;
-    // margin-top: 7.5%;
-    // margin-left: 42.5%;
+    margin-bottom: 200px;
+    margin-left: 200px;
     color: #7393B3;
     font-family: cursive;
-    font-size: larger;
-    border: 1px solid #00ff11;
+    font-size: xx-large;
+    // border: 1px solid #00ff11;
     z-index: 1;
-
 }
-
-
 
 #tooltip {
     position: absolute; 
@@ -410,6 +452,59 @@ body{
     // border-style: solid;
     height: 150px;
     width: 315px;
+
+}
+#git-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+    width: 150px;
+    height: 100px;
+    margin-left:4%;
+    margin-top: 40%; 
+    // border: solid black;
+}
+
+#git{
+    // display: flex;
+    // position: absolute;
+    // justify-content: center;
+    z-index: 2;
+    background-image: url("/src/assets/github-logo.png");
+    background-repeat: no-repeat;
+    background-size: 25%;
+    background-position: center;
+    margin-right: 100%;
+    height: 150px;
+    width: 315px;
+}
+
+#linkedin-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+    width: 150px;
+    height: 100px;
+    margin-right:15%;
+    margin-top: 40.1%;
+}
+
+#linkedin{
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    z-index: 2;
+    // border-style: solid;
+    height: 150px;
+    width: 315px;
+    background-image: url("/src/assets/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930587_72.png");
+    background-repeat: no-repeat;
+    background-size: 38%;
+    background-position: center;
 
 }
 
@@ -480,6 +575,75 @@ body{
     width: 400px;
 
 }
+
+#cuisine {
+    appearance: none; /* Remove default appearance */
+    -webkit-appearance: none; /* Safari/Chrome */
+    -moz-appearance: none; /* Firefox */
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+#health {
+    appearance: none; /* Remove default appearance */
+    -webkit-appearance: none; /* Safari/Chrome */
+    -moz-appearance: none; /* Firefox */
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+#mealType {
+    appearance: none; /* Remove default appearance */
+    -webkit-appearance: none; /* Safari/Chrome */
+    -moz-appearance: none; /* Firefox */
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+#dishType {
+    appearance: none; /* Remove default appearance */
+    -webkit-appearance: none; /* Safari/Chrome */
+    -moz-appearance: none; /* Firefox */
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+#diet {
+    appearance: none; /* Remove default appearance */
+    -webkit-appearance: none; /* Safari/Chrome */
+    -moz-appearance: none; /* Firefox */
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+
+#resetButton {
+        position: absolute;
+        appearance: none; /* Remove default appearance */
+        -webkit-appearance: none; /* Safari/Chrome */
+        -moz-appearance: none; /* Firefox */
+        background-color: #fff;
+        color: #333;
+        border: 1px solid #ccc;
+        padding: 10px;
+        border-radius: 0 5px 5px 0;
+        margin-top: 700px;
+        margin-right: 100px;
+
+}
+
+
+
 
 
 
