added dots to links

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@ body{
 
 #dishwasher:hover{
     cursor: pointer;
-    background-image: url("/src/assets/Kitchen_furniture_set/Dishwasher_white_open.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Dishwasher_white_open.png");
 }
 
 
@@ -32,7 +32,7 @@ body{
     height: 857px;
     width: 100%;
     margin-right: 5px;
-    background-image: url("/src/assets/Kitchen_furniture_set/Fridge_gray_2_open_1.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Fridge_gray_2_open_1.png");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: 89%;
@@ -42,11 +42,11 @@ body{
 
 #fridge:hover{
     cursor: pointer;
-    background-image: url("/src/assets/Kitchen_furniture_set/Fridge_gray_2_open.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Fridge_gray_2_open.png");
 }
 #oven:hover{
     cursor: pointer;
-    background-image: url("/src/assets/Kitchen_furniture_set/Stove_open.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Stove_open.png");
 }
 #drawer:hover{
     cursor: pointer;
@@ -78,7 +78,7 @@ body{
     height: 100%;
     width: 25%;
     margin-right: 5px;
-    background-image: url("/src/assets/Kitchen_furniture_set/Range_hood_1.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Range_hood_1.png");
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;
@@ -88,7 +88,7 @@ body{
 
 
 #oven { 
-    background-image: url("/src/assets/Kitchen_furniture_set/Stove_close.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Stove_close.png");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
@@ -102,7 +102,7 @@ body{
 #cabinet {
     // border-style: solid;
     width: 25%;
-    background-image: url("/src/assets/Kitchen_furniture_set/Cupboard_white_1.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Cupboard_white_1.png");
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;
@@ -112,7 +112,7 @@ body{
 #cabinet-two {
     // border-style: solid;
     width: 25%;
-    background-image: url("/src/assets/Kitchen_furniture_set/Cupboard_white_1.png");
+    background-image: url("../src/assets/Kitchen_furniture_set/Cupboard_white_1.png");
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;
@@ -304,6 +304,22 @@ body{
 #clearRecipe{
     // display: flex;
     margin-left: 50px;
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+
+#clearButton {
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+}
+
+#add-ingredient {
     background-color: #fff;
     color: #333;
     border: 1px solid #ccc;
