--- a/src/index.scss
+++ b/src/index.scss
@@ -233,9 +233,16 @@ body{
 
 .ingredients {
     list-style: none;
+    display: flex-column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20%;
 }
 
 .ingredients-container{
+    display: flex-column;
+    justify-content: center;
+    align-items: center;
     margin-top: 5%;
     color: #7393B3;
     font-family: cursive;
@@ -272,20 +279,13 @@ body{
 }
 
 .recipe-container {
-    display: flex-column;
-    align-items: center;
     color: #7393B3;
     font-family: cursive;
     font-size: larger;
-    // border: 1px solid #00ff11;
     width: 50%; 
 }
 
 .recipe{
-    display: flex-column;
-    justify-content: center;
-    align-items: center;
-    // position: absolute;
     margin-left: 20%;
     list-style: none;
 }
@@ -299,6 +299,9 @@ body{
     border-radius: 0 5px 5px 0;
     margin-top: 50px;
     margin-left: 50px;
+    font-family: cursive;
+    font-size: medium;
+    color: #7393B3;
 }
 
 #clearRecipe{
@@ -309,31 +312,39 @@ body{
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 0 5px 5px 0;
+    font-family: cursive;
+    font-size: medium;
+    color: #7393B3;
 }
 
 #clearButton {
     background-color: #fff;
     color: #333;
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 5px;
     border-radius: 0 5px 5px 0;
+    height: 5%;
+    font-family: cursive;
+    font-size: medium;
+    color: #7393B3;
 }
 
 #add-ingredient {
+    font-family: cursive;
+    font-size: medium;
     background-color: #fff;
     color: #333;
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 0 5px 5px 0;
+    color: #7393B3;
 }
 
+
 .pie-chart-container{
-    display: flex;
-    position: inherit;
-    // border: 1px solid #ff0000;
-    width: 75%;
-    height: 50%;
+    display: block;
 }
+
 #chart-page{
     display: flex;
     align-items: center;
@@ -343,10 +354,24 @@ body{
 }
 
 #chart{
+    display: flex-column;
+    align-items: center;
+    color: #7393B3;
+    font-family: cursive;
+    font-size: larger;
     // border: 1px solid #00ff11;
     height: 100%;
     width: 100%;
-    // margin-right: 20%;
+    // margin-left: 10%;
+    margin-top: 10%;
+}
+
+#chart > h1 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    margin-right: 10%;
+    margin-top: 7%;
 }
 
 .chart{
@@ -408,14 +433,16 @@ body{
 
 #tooltip {
     position: absolute; 
-    width: 200px;
+    display: flex-column;
+    // margin-right: 500px;
+    width: 100px;
     height: auto;
-    padding: 10px;
     background-color: rgb(161, 161, 161);
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
     opacity: 0;
+    color: black;
 }
 
 #microwave-container{
@@ -655,8 +682,9 @@ body{
         border-radius: 0 5px 5px 0;
         margin-top: 700px;
         margin-right: 100px;
-
 }
+
+
 
 
 
