--- a/src/index.scss
+++ b/src/index.scss
@@ -682,6 +682,8 @@ body{
         border-radius: 0 5px 5px 0;
         margin-top: 700px;
         margin-right: 100px;
+        color: #7393B3;
+        font-family: cursive;
 }
 
 
